--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,30 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
+    types: [ opened, synchronize, closed ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+#https://docs.github.com/en/actions/learn-github-actions/environment-variables
+#echo 2: ${GITHUB_REF_NAME} # github pseudo 'merge' branch
+#echo 3: ${GITHUB_BASE_REF} # github target branch (main)
+#echo 4: ${GITHUB_HEAD_REF} # github source branch (feature)
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  checkvars:
+    name: Check Env Vars
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout Source
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Print Envvar
+        env:
+          GOPATH: ${{ runner.workspace }}
+          GOPRIVATE: github.com/software-advice/*
+        run: | 
+          echo 1: ${GITHUB_REF_NAME}
+          echo 2: ${GITHUB_BASE_REF}
+          echo 3: ${GITHUB_HEAD_REF}
+          
