--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   checkvars:
+    if: github.event.pull_request.merged == true || github.ref_name != github.base_ref
     name: Check Env Vars
     runs-on: ubuntu-latest
     steps:
@@ -33,7 +34,7 @@ jobs:
         run: |
           if [[ ${GITHUB_REF_NAME} == ${GITHUB_BASE_REF} ]]; then
             echo "::set-output name=branch::$(echo ${GITHUB_REF_NAME} | tr / -)"
-            echo "::set-output name=sha::${{github.event.pull_request.after.sha}}"
+            echo "::set-output name=sha::${{github.sha}}"
             echo "::set-output name=base_sha::${{github.event.before}}"
             echo "Main Branch: $(echo ${GITHUB_REF_NAME} | tr / -)"
             TAG=${{github.event.after}}
