--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
             echo "::set-output name=sha::${{github.sha}}"
             echo "::set-output name=base_sha::${{github.event.before}}"
             echo "Main Branch: $(echo ${GITHUB_REF_NAME} | tr / -)"
-            TAG=${{github.event.after}}
+            TAG=${{github.sha}}
           else
             echo "::set-output name=branch::$(echo ${GITHUB_HEAD_REF}  | tr / -)"
             echo "::set-output name=sha::${{github.event.pull_request.head.sha}}"
