--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   checkvars:
-    if: github.event.pull_request.merged == true || github.ref_name != github.base_ref
+    if: ${{ github.event.pull_request.merged == true || github.ref_name != github.base_ref }}
     name: Check Env Vars
     runs-on: ubuntu-latest
     steps:
