--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   checkvars:
-    if: ${{ github.event.pull_request.merged == true || github.ref_name != github.base_ref }}
+    # if: ${{ github.event.pull_request.merged == true  }}
     name: Check Env Vars
     runs-on: ubuntu-latest
     steps:
@@ -28,6 +28,7 @@ jobs:
           echo 1: ${GITHUB_REF_NAME}
           echo 2: ${GITHUB_BASE_REF}
           echo 3: ${GITHUB_HEAD_REF}
+          echo 4: ${{github.event.pullrequest.action}}
           
       - name: Get Git Details
         id: git_info
