--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,8 @@ jobs:
           echo 1: ${GITHUB_REF_NAME}
           echo 2: ${GITHUB_BASE_REF}
           echo 3: ${GITHUB_HEAD_REF}
-          echo 5: ${{github.event.pull_request.action}}
-          echo 6: ${{github.event.pull_request.types}}
-          echo 7: ${{github.event.pull_request.type}}
-          echo 8: ${{github.event.type}}
-          
+          echo 5: ${{toJSON(github.event.pull_request)}
+      
       - name: Get Git Details
         id: git_info
         run: |
