--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,12 @@ on:
 #echo 2: ${GITHUB_REF_NAME} # github pseudo 'merge' branch
 #echo 3: ${GITHUB_BASE_REF} # github target branch (main)
 #echo 4: ${GITHUB_HEAD_REF} # github source branch (feature)
-
+#   echo 5: ${{toJSON(github.event.pull_request)}}
 jobs:
   checkvars:
     name: Check Env Vars
     runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.state == "open" || (github.event.pull_request.state != "open" && github.event.pull_request.merged)  }}
     steps:
       - name: Checkout Source
         uses: actions/checkout@v3
@@ -26,17 +27,13 @@ jobs:
         run: | 
           echo 1: ${GITHUB_REF_NAME}
           echo 2: ${GITHUB_BASE_REF}
-          echo 3: ${GITHUB_HEAD_REF}
-          echo 5: ${{toJSON(github.event.pull_request)}}
+          echo 3: ${GITHUB_HEAD_REF} 
+          echo 4: ${{github.event.pull_request.state}}
       
       - name: Get Git Details
         id: git_info
         run: |
-          if [[ ${GITHUB_REF_NAME} == ${GITHUB_BASE_REF} ]]; then
-            if [[ "${{ github.event.pull_request.merged }}" != true ]]; then
-              echo "This was a closed PR, I think"
-              exit 0
-            fi
+          if [[ ${GITHUB_REF_NAME} == ${GITHUB_BASE_REF} ]]; then           
             echo "::set-output name=branch::$(echo ${GITHUB_REF_NAME} | tr / -)"
             echo "::set-output name=sha::${{github.sha}}"
             echo "::set-output name=base_sha::${{github.event.before}}"
