--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
   checkvars:
     name: Check Env Vars
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.state == "open" || (github.event.pull_request.state != "open" && github.event.pull_request.merged)  }}
+#    if: ${{ (github.event.pull_request.state == "open") || (github.event.pull_request.state != "open" && github.event.pull_request.merged)  }}
     steps:
       - name: Checkout Source
         uses: actions/checkout@v3
@@ -33,6 +33,14 @@ jobs:
       - name: Get Git Details
         id: git_info
         run: |
+          if [[ ${{ github.event.pull_request.state }} != "open" ]] then
+            echo "This PR is not open"
+            if [[ ${{github.event.pull_request.merged}} != "true" ]] then
+              echo "this PR was not merged"
+              exit 0
+            fi
+            echo "This PR was merged to main, continuing.
+          fi
           if [[ ${GITHUB_REF_NAME} == ${GITHUB_BASE_REF} ]]; then           
             echo "::set-output name=branch::$(echo ${GITHUB_REF_NAME} | tr / -)"
             echo "::set-output name=sha::${{github.sha}}"
