--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,11 @@ jobs:
         run: |
           if [[ "${{ github.event.pull_request.state }}" != "open" ]]; then
             echo "This PR is not open"
-            if [[ ${{github.event.pull_request.merged}} != "true" ]]; then
+            if [[ "${{github.event.pull_request.merged}}" != "true" ]]; then
               echo "this PR was not merged"
               exit 0
             fi
-            echo "This PR was merged to main, continuing.
+            echo "This PR was merged to main, continuing."
           fi
           if [[ ${GITHUB_REF_NAME} == ${GITHUB_BASE_REF} ]]; then           
             echo "::set-output name=branch::$(echo ${GITHUB_REF_NAME} | tr / -)"
